--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@flamework/components": "^1.3.1",
     "@flamework/core": "^1.3.1",
     "@flamework/networking": "^1.3.1",
+    "@rbxts/altmake": "^0.1.5",
     "@rbxts/charm": "^0.10.0",
     "@rbxts/format-number": "^3.0.9-b3",
     "@rbxts/object-utils": "^1.0.4",
     "@rbxts/profileservice": "^1.4.2",
     "@rbxts/shared-components-flamework": "^2.7.1",
     "@rbxts/vide": "^0.5.7",
-    "@rbxts/vide-charm": "^0.3.0"
+    "@rbxts/vide-charm": "^0.3.0",
+    "io-serve": "^1.1.2",
+    "rbxts-object-to-tree": "^0.0.0"
   }
 }
